# RobotArm

./: README.md  demos.mat  finaltraj.mat  gmm_model.py  matlab.mat  runfile.py  xdot.txt  xtrajfinal.mat  ytrajfinal.mat  ztrajfinal.mat
WAMwkspc/.catkin_tools/profiles/default/: devel_collisions.txt
WAMwkspc/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
WAMwkspc/devel/.private/catkin/: .catkin  setup.sh
WAMwkspc/devel/.private/catkin_tools_prebuild/: .catkin
WAMwkspc/devel/.private/cmake_modules/: .catkin  (+2 more)
WAMwkspc/logs/catkin/: build.cmake.000.log.stderr
WAMwkspc/logs/catkin_tools_prebuild/: build.cmake.000.log.stderr
WAMwkspc/logs/rospack/: build.make.000.log.stderr
WAMwkspc/logs/std_msgs/: build.make.000.log.stderr  build.make.001.log.stderr  build.make.002.log.stderr  build.make.003.log.stderr  build.make.004.log.stderr  build.make.005.log.stderr  build.make.006.log.stderr  build.make.007.log.stderr  build.make.008.log.stderr
WAMwkspc/logs/std_srvs/: build.make.000.log.stderr  build.make.003.log.stderr  build.make.004.log.stderr  build.make.006.log.stderr  build.make.007.log.stderr
WAMwkspc/src/: .rosinstall
wam_dir/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
wam_dir/logs/armmove/: build.cmake.000.log.stderr
wam_dir/src/armmove/: CMakeLists.txt  package.xml
wam_dir/src/armmove/src/: armmove.py  weight_control.py
wamdir/devel/: .catkin  _setup_util.py  local_setup.sh  setup.sh
(+823 files in other folders)
